revert to http addres
testing HSTS setup on rouleau lab server. Should automatically redirect http requests to https

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url =  https://132.206.65.34/s2d/login.cgi" />
+      <meta http-equiv = "refresh" content = "0; url =  http://132.206.65.34/s2d/login.cgi" />
    </head>
    <body>
       <p>Redirecting to S2D interface (might take few seconds)</p>
